272 - Add ParameterMap, remove util classes in component-api, update specification